--- a/src/store/static/store.css
+++ b/src/store/static/store.css
@@ -1,11 +1,29 @@
-a {
+/* SafieStore.jsx*/
+.safie-store a {
   color          : #100D08;
   text-decoration: none;
 }
-a:hover {
+.safie-store a:hover {
   color: #FFC107;
 }
 
+.safie-store .conteudo-loja {
+  margin-top   : 3rem;
+  margin-bottom: 3rem;
+}
+
+/* Header.jsx*/
+.header-container,
+.header-container h1 {
+  font-size     : 10rem;
+  height        : 20rem;
+  text-align    : center;
+  text-transform: lowercase;
+  vertical-align: bottom;
+  line-height   : 20rem;
+}
+
+/* Menu.jsx*/
 nav.menu {
   background-color: #100D08;
   text-transform  : uppercase;
@@ -22,70 +40,92 @@ nav.menu a:last-child {
   margin-right: 0;
 }
 
-.header-container,
-.header-container h1 {
-  font-size     : 10rem;
-  height        : 20rem;
-  text-align    : center;
-  text-transform: lowercase;
-  vertical-align: bottom;
-  line-height   : 20rem;
-
-}
-
-.listagem-produtos {
-  margin-top   : 3rem;
-  margin-bottom: 3rem;
-}
-
-.listagem-produtos .row {
+/* Products.jsx*/
+.grid-produtos .linha {
   max-height: 50rem;
 }
 
-.produto-legenda {
-  height: 8rem;
-}
-
-.produto-listagem {
+/*ProductCard.jsx*/
+.card-produto {
   text-align: center;
 }
 
-.produto-imagem {
+.card-produto .foto {
   max-height: 45rem;
 }
 
-.produto-imagem img {
+.card-produto .foto img {
   max-height: inherit;
 }
 
+.card-produto .legenda {
+  height: 8rem;
+}
+
+/* ProductMainPicture.jsx */
 .foto-principal-produto img {
   max-width: 100%;
 }
 
-.thumbnail-container {
-  height  : 10rem;
-  width   : 10rem;
-  display : inline;
-  overflow: hidden;
+/*ProductPicturesPicker.jsx*/
+.thumbnail-produto {
+  height            : 10rem;
+  width             : 10rem;
+  float             : left;
+  -webkit-filter: grayscale(100%);
+  -webkit-transition: all 1s ease;
+  -moz-transition   : all 1s ease;
+  -o-transition     : all 1s ease;
+  -ms-transition    : all 1s ease;
+  transition        : all 1s ease;
+}
+.thumbnail-produto:hover {
+  -webkit-filter: grayscale(0);
+}
+.thumbnail-produto img {
+  max-width : 100%;
+  max-height: 100%;
 }
 
-.thumbnail-container img {
-  max-width: 100%;
-}
-
-.botao-comprar-produto {
-  border        : 0.5rem solid #100D08;
-  text-transform: uppercase;
-  text-align    : center;
-
+/*ProductDetails.jsx*/
+.detalhes-produto {
+  border-left   : 1px solid #100D08;
+  min-height    : 25rem;
+  padding-left  : 3rem;
+  padding-bottom: 2rem;
   padding-top   : 1rem;
-  padding-bottom: 1rem;
 }
 
-.spacer-band {
-  height: 50rem;
+.detalhes-produto .descricao {
+  padding-bottom: 5rem;
 }
 
+.detalhes-produto .medidas {
+  padding-bottom: 2rem;
+}
+
+.detalhes-produto .medidas input {
+  border-radius: 0;
+  width        : 100%;
+}
+.detalhes-produto .medidas input:focus {
+  border: 1px solid #100D08;
+}
+
+.comprar-produto button {
+  font-size    : 1.5rem;
+  height       : 4rem;
+  border-radius: 0;
+  border       : 0.2rem solid #100D08;
+  width        : 100%;
+}
+.comprar-produto button:hover {
+  color           : #100D08;
+  font-weight     : 600;
+  background-color: #FFF59D;
+}
+
+/*Footer.jsx*/
 .footer-band {
   height          : 30rem;
   background-color: #100D08;
