--- a/src/store/static/store.css
+++ b/src/store/static/store.css
@@ -47,7 +47,8 @@ nav.menu a:last-child {
 
 /*ProductCard.jsx*/
 .card-produto {
-  text-align: center;
+  text-align    : center;
+  padding-bottom: 8rem;
 }
 
 .card-produto .foto {
@@ -56,10 +57,6 @@ nav.menu a:last-child {
 
 .card-produto .foto img {
   max-height: inherit;
-}
-
-.card-produto .legenda {
-  height: 8rem;
 }
 
 /* ProductMainPicture.jsx */
@@ -125,7 +122,39 @@ nav.menu a:last-child {
   background-color: #FFF59D;
 }
 
-/*Footer.jsx*/
+/* ShoppingBag.jsx */
+.sacola td {
+  vertical-align: top;
+}
+
+/* BagProduct.jsx */
+.produto-sacola .imagem {
+  max-height   : 25rem;
+  max-width    : 20rem;
+  float        : left;
+  padding-right: 1rem;
+  margin-right : 2rem;
+}
+
+.produto-sacola .imagem img {
+  max-width : 100%;
+  max-height: 100%;
+}
+
+.produto-sacola-medidas p {
+  margin-bottom: 0;
+}
+
+.produto-sacola-medidas .medida {
+  font-weight  : bold;
+  padding-right: 3rem;
+}
+
+.produto-sacola-medidas .tamanho {
+  font-style: italic;
+}
+
+/* Footer.jsx */
 .footer-band {
   height          : 30rem;
   background-color: #100D08;
