--- a/src/store/static/store.css
+++ b/src/store/static/store.css
@@ -33,6 +33,36 @@
   background-color: #E3F2FD;
 }
 
+.logo {
+  background     : url("img/logo.png") no-repeat center center;
+  background-size: contain;
+  width          : 30rem;
+  height         : 30rem;
+  position       : relative;
+  left           : 30rem;
+  top            : 20rem;
+}
+
+.understand-button {
+  text-align      : center;
+  background-color: rgba(255,255,255,0.5);
+  font-size       : 1.2rem;
+  width           : 30rem;
+  border-radius   : 10rem;
+  margin-left     : -3rem;
+  position        : absolute;
+  bottom          : 4rem;
+}
+
+.understand-button a {
+  color: #EEA682;
+}
+
+.understand-button a:hover {
+  color          : #f0986c;
+  text-decoration: underline;
+}
+
 /* Menu.jsx*/
 nav.menu {
   text-transform: uppercase;
@@ -227,12 +257,6 @@ nav.menu a:hover {
   margin-left: 1rem;
 }
 
-/* Larger than mobile */
-@media (min-width: 400px) {}
-
-/* Larger than phablet */
-@media (min-width: 550px) {}
-
 /* Larger than tablet */
 @media (min-width: 750px) {
   .container {
@@ -422,7 +446,7 @@ nav.menu a:hover {
 @media (min-width: 1200px) {
   .subscribe-popup {
     width : 40vw;
-    height: 55vh;
+    height: 45vh;
   }
 }
 @media (min-width: 2500px) {
@@ -431,3 +455,90 @@ nav.menu a:hover {
     height: 30vh;
   }
 }
+
+/* ----------- Galaxy S5 ----------- */
+
+/* Portrait */
+/*@media screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait) {
+  .subscribe-popup {
+    height: 45vh;
+  }
+
+}
+
+/* Landscape */
+/*@media screen and (device-width: 360px) and (device-height: 640px) and (orientation: landscape) {
+  .subscribe-popup {
+    height: 80vh;
+  }
+}
+
+/* Larger than mobile */
+@media (min-width: 400px) {}
+
+/* Larger than phablet */
+@media (min-width: 550px) {}
+
+/* ----------- iPhone 5 and 5S ----------- */
+
+/* Portrait and Landscape */
+/*@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {}*/
+
+/* Portrait */
+/*@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+  .subscribe-popup {
+    height: 55vh;
+  }
+}*/
+
+/* Landscape */
+/*@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {}*/
+
+/* ----------- iPhone 6 ----------- */
+
+/* Portrait and Landscape */
+/*@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {}
+
+/* Portrait
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+  .subscribe-popup {
+    height: 45vh;
+  }
+}*/
+
+/* Landscape */
+/*@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {}*/
+
+/* ----------- iPhone 6+ ----------- */
+
+/* Portrait and Landscape */
+/*@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) {}*/
+
+/* Portrait */
+/*@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
+  .subscribe-popup {
+    height: 40vh;
+  }
+}*/
+
+/* Landscape */
+/*@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {}*/
+
+/* ----------- iPad mini ----------- */
+
+/* Portrait and Landscape */
+/*@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {}*/
+
+/* Portrait */
+/*@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
+  .subscribe-popup {
+    height: 30vh;
+  }
+}*/
+
+/* Landscape */
+/*@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
+  .subscribe-popup {
+    height: 35vh;
+  }
+}*/
