--- a/src/store/static/store.css
+++ b/src/store/static/store.css
@@ -34,13 +34,7 @@
 }
 
 .logo {
-  background     : url("img/logo.png") no-repeat center center;
-  background-size: contain;
-  width          : 30rem;
-  height         : 30rem;
-  position       : relative;
-  left           : 30rem;
-  top            : 20rem;
+  display: none;
 }
 
 .understand-button {
@@ -126,17 +120,23 @@ nav.menu a:hover {
 }
 
 .subscribe-popup {
-  font-family   : "Bree Serif", serif;
-  padding-top   : 2rem;
-  padding-bottom: 2rem;
-  height        : 60vh;
-  width         : 90vw;
-  padding-right : 1rem;
-  padding-left  : 1rem;
+  font-family: "Bree Serif", serif;
+  height     : 60vh;
+  width      : 90vw;
 }
 
 .subscribe-popup h2 {
   margin: 0;
+}
+
+.subscribe-popup .content {
+  /*background-color: rgba(25,25,25,0.5);*/
+  position : absolute;
+  top      : 50%;
+  left     : 50%;
+  transform: translate(-50%,-50%);
+  width    : 95%;
+  padding  : 2rem 1rem;
 }
 
 .subscribe-popup .actions {
@@ -272,6 +272,16 @@ nav.menu a:hover {
     -o-background-size     : cover;
     background-size        : cover;
 
+  }
+
+  .logo {
+    background     : url("img/logo.png") no-repeat center center;
+    background-size: contain;
+    width          : 30rem;
+    height         : 30rem;
+    position       : relative;
+    left           : 30rem;
+    top            : 20rem;
   }
 
   .subscribe-popup {
@@ -438,7 +448,7 @@ nav.menu a:hover {
 @media (min-width: 1000px) {
   .subscribe-popup {
     width : 50vw;
-    height: 60vh;
+    height: 45vh;
   }
 }
 
@@ -446,13 +456,13 @@ nav.menu a:hover {
 @media (min-width: 1200px) {
   .subscribe-popup {
     width : 40vw;
-    height: 45vh;
+    height: 30vh;
   }
 }
 @media (min-width: 2500px) {
   .subscribe-popup {
     width : 30vw;
-    height: 30vh;
+    height: 20vh;
   }
 }
 
