--- a/src/store/static/store.css
+++ b/src/store/static/store.css
@@ -59,12 +59,20 @@
 
 /* Menu.jsx*/
 nav.menu {
-  text-transform: uppercase;
+  /*text-transform: uppercase;
   line-height   : 3.5rem;
   width         : 20rem;
   position      : absolute;
   top           : 2rem;
-  margin-left   : 2rem;
+  margin-left   : 2rem;*/
+  text-transform: uppercase;
+  line-height   : 3.5rem;
+  width         : 20rem;
+  position      : relative;
+  padding-top   : 2rem;
+  padding-left  : 2rem;
+  height        : 100vh;
+  float         : left;
 }
 
 nav.menu a {
@@ -78,6 +86,19 @@ nav.menu a {
 
 nav.menu a:hover {
   font-weight: bold;
+}
+
+.quickbag {
+  text-align: center;
+  height    : 100vh;
+  width     : 10vw;
+  background: rgba(238,166,130,0.5);
+  float     : right;
+}
+
+.layout-content {
+  height: 100vh;
+  float : left;
 }
 
 .dimmer {
