--- a/src/store/static/store.css
+++ b/src/store/static/store.css
@@ -73,6 +73,7 @@ nav.menu {
   padding-left  : 2rem;
   height        : 100vh;
   float         : left;
+
 }
 
 nav.menu a {
@@ -82,6 +83,7 @@ nav.menu a {
   border-bottom: 1px solid #444;
   line-height  : 2.5rem;
   margin-top   : 1.5rem;
+
 }
 
 nav.menu a:hover {
@@ -89,16 +91,34 @@ nav.menu a:hover {
 }
 
 .quickbag {
+  transition: all 0.5s ease;
+  width     : 5rem;
   text-align: center;
   height    : 100vh;
-  width     : 10vw;
   background: rgba(238,166,130,0.5);
-  float     : right;
+  text-align: center;
+  height    : 100vh;
+  background: rgba(238,166,130,0.5);
+  position  : fixed;
+  right     : 0;
+}
+
+.quickbag.open {
+  width: 15rem;
+}
+
+.quickbag .items {
+  display: none;
+}
+
+.quickbag.open .items {
+  display: block;
 }
 
 .layout-content {
-  height: 100vh;
-  float : left;
+  float         : left;
+  padding-top   : 5rem;
+  padding-bottom: 10rem;
 }
 
 .dimmer {
@@ -277,9 +297,9 @@ nav.menu a:hover {
 /* Larger than tablet */
 @media (min-width: 750px) {
   .container {
-    width    : 95vw;
+    /*width    : 95vw;
     max-width: 95vw;
-    margin   : 0;
+    margin: 0;*/
   }
 
   .safie-store .landing {
