--- a/src/store/static/store.css
+++ b/src/store/static/store.css
@@ -22,13 +22,13 @@ input:focus {
   border-color: #999;
 }
 
-nput[type="submit"] {
+input[type="submit"] {
   background-color: #555;
   border          : 1px solid #555;
   color           : white;
 }
 
-.safie-store .landing {
+.landing {
   height          : 100vh;
   background-color: #E3F2FD;
 }
@@ -62,9 +62,13 @@ nput[type="submit"] {
   transition: all 0.5s ease;
   width     : 5rem;
   text-align: center;
-  position  : fixed;
-  right     : 0;
-  top       : 0;
+  position  : relative;
+}
+
+.navigation i {
+  font-size  : 3rem;
+  margin-left: 3rem;
+  margin-top : 3rem;
 }
 
 nav.menu {
@@ -76,6 +80,7 @@ nav.menu {
   padding-left  : 2rem;
   height        : 100vh;
   float         : left;
+  text-align    : left;
   display       : none;
 }
 
@@ -93,15 +98,39 @@ nav.menu a:hover {
   font-weight: bold;
 }
 
+nav.menu.open {
+  display           : block;
+  position          : absolute;
+  margin-left       : 3rem;
+  padding-left      : 1rem;
+  background-color  : rgba(255,255,255,0.8);
+  padding-bottom    : 2rem;
+  -webkit-box-shadow: 3px 5px 4px -1px rgba(204,204,204,0.8);
+  -moz-box-shadow   : 3px 5px 4px -1px rgba(204,204,204,0.8);
+  box-shadow        : 3px 5px 4px -1px rgba(204,204,204,0.8);
+  height            : auto;
+}
+
 .quickbag {
   transition: all 0.5s ease;
   width     : 5rem;
   text-align: center;
   height    : 100vh;
   background: rgba(238,166,130,0.5);
-  position  : fixed;
+  position  : absolute;
   right     : 0;
   top       : 0;
+}
+
+/*mobile*/
+.quickbag {
+  height    : auto;
+  background: none;
+}
+
+.quickbag i {
+  margin-right: 3rem;
+  margin-top  : 3rem;
 }
 
 .quickbag.open {
