--- a/src/store/static/masonry.css
+++ b/src/store/static/masonry.css
@@ -1,5 +1,5 @@
 .masonry-wrapper {
-  width       : 85%;
+  width       : 75%;
   margin-left : auto;
   margin-right: auto;
 }
@@ -13,7 +13,7 @@
   padding             : 0;
   -moz-column-gap     : 0;
   -webkit-column-gap  : 0;
-  column-gap          : 0;
+  column-gap          : 1rem;
   -moz-column-count   : 1;
   -webkit-column-count: 1;
   column-count        : 1;
@@ -32,6 +32,7 @@
   max-width     : 100%;
   vertical-align: bottom;
   margin-bottom : 1rem;
+
 }
 @media screen and (min-width: 400px) {
   .masonry {
@@ -39,6 +40,7 @@
     -webkit-column-count: 2;
     column-count        : 2;
   }
+
 }
 @media screen and (min-width: 1000px) {
   .masonry {
