--- a/src/store/static/store.css
+++ b/src/store/static/store.css
@@ -14,6 +14,7 @@ a:hover {
   color: #555;
 }
 
+button,
 input {
   border-radius: 0;
 }
@@ -82,7 +83,6 @@ nav.menu {
   position      : relative;
   padding-top   : 2rem;
   padding-left  : 2rem;
-  height        : 100vh;
   float         : left;
   text-align    : left;
   display       : none;
@@ -137,6 +137,7 @@ nav.menu span:hover {
 }
 
 nav.menu.open {
+  z-index           : 999;
   display           : block;
   position          : absolute;
   margin-left       : 3rem;
@@ -290,6 +291,159 @@ nav.menu.open {
   font-size: 1.3rem;
 }
 
+.layout-content {
+  margin-top   : 5rem;
+  margin-bottom: 3rem;
+}
+
+/* Products.jsx*/
+.grid-produtos .linha {
+  float: left;
+  width: 100%;
+}
+
+/*ProductCard.jsx*/
+.card-produto {
+  text-align: center;
+}
+
+.card-produto p {
+  margin: 0;
+}
+
+/* ProductPicture.jsx */
+
+.foto-produto img {
+  max-width : 100%;
+  max-height: 100%;
+}
+
+/* ProductMainPicture.jsx */
+.foto-principal-produto img {
+  max-width: 100%;
+}
+
+.foto-principal-produto i.fa {
+  position: absolute;
+  top     : 45%;
+}
+
+.foto-principal-produto i.fa-angle-double-right {
+  right: 0;
+}
+
+/*ProductPicturesViewer.jsx*/
+.picture-viewer .container {
+  width: 50%;
+}
+
+.picture-viewer .foto-principal-produto .foto-produto {
+  height    : 90vh;
+  text-align: center;
+}
+
+.picture-picker {
+  float: right;
+}
+
+.thumbnail-produto {
+  width             : 10rem;
+  overflow          : hidden;
+  -webkit-filter: grayscale(100%);
+  -webkit-transition: all 1s ease;
+  -moz-transition   : all 1s ease;
+  -o-transition     : all 1s ease;
+  -ms-transition    : all 1s ease;
+  transition        : all 1s ease;
+  margin-bottom     : 1rem;
+}
+
+/*.thumbnail-produto.active*/
+.thumbnail-produto:hover {
+  -webkit-filter: grayscale(0);
+}
+
+.thumbnail-produto img {
+  max-width : 100%;
+  max-height: 100%;
+}
+
+/* ProductDetails.jsx */
+.detalhes-produto {
+  padding-top: 10rem;
+}
+
+.detalhes-produto h3 {
+  font-size     : 1.8rem;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+}
+
+.produto-preco h5 {
+  font-size: 1.5rem;
+}
+
+/* ProductInfo.jsx */
+.informacoes-produto {
+  font-size    : 1.2rem;
+  font-weight  : 300;
+  display      : block;
+  margin-top   : 0;
+  margin-bottom: 0;
+  text-align   : left;
+}
+
+.informacoes-produto h3 {
+  margin-bottom : 1rem;
+  font-size     : 1.3rem;
+  text-transform: uppercase;
+
+}
+
+/* SizeForm.jsx */
+.form-medidas {
+  padding-bottom: 2rem;
+}
+
+.form-medidas input {
+  border-radius: 0;
+  width        : 100%;
+}
+
+.form-medidas input:focus {
+  border: 1px solid #100D08;
+}
+
+/* BuyButton.jsx */
+.comprar-produto {
+  text-align: center;
+}
+
+.measures-button {
+  background-color: #333;
+  color           : rgba(238,166,130,0.8);
+}
+
+.comprar-produto button {
+  font-size: 1.5rem;
+  height   : 4rem;
+  border   : none;
+  width    : 80%;
+}
+
+.buy-button {
+  background-color: #CCC;
+}
+
+.comprar-produto button:hover {
+  font-weight: 600;
+}
+
+.social {
+  font-size     : 2rem;
+  letter-spacing: 1.5rem;
+}
+
 .footer-band {
   padding-left  : 5rem;
   border-bottom : 1rem solid #EEA682;
@@ -386,107 +540,6 @@ nav.menu.open {
 
   .subscribe {
     width: 40vw;
-  }
-
-  /* Header.jsx*/
-  .header-container,
-  .header-container h1 {
-    font-size     : 10rem;
-    height        : 20rem;
-    text-align    : center;
-    text-transform: lowercase;
-    line-height   : 20rem;
-    letter-spacing: -0.5rem;
-  }
-
-  /* Products.jsx*/
-  .grid-produtos .linha {
-    float: left;
-    width: 100%;
-  }
-
-  /*ProductCard.jsx*/
-  .card-produto {
-    text-align: center;
-  }
-
-  .card-produto p {
-    margin: 0;
-  }
-
-  /* ProductPicture.jsx */
-
-  .foto-produto img {
-    max-width : 100%;
-    max-height: 100%;
-  }
-
-  /* ProductMainPicture.jsx */
-  .foto-principal-produto img {
-    max-width: 100%;
-  }
-
-  /*ProductPicturesViewer.jsx*/
-  .thumbnail-produto {
-    height            : 10rem;
-    width             : 10rem;
-    float             : left;
-    margin-right      : 2rem;
-    overflow          : hidden;
-    -webkit-filter: grayscale(100%);
-    -webkit-transition: all 1s ease;
-    -moz-transition   : all 1s ease;
-    -o-transition     : all 1s ease;
-    -ms-transition    : all 1s ease;
-    transition        : all 1s ease;
-  }
-
-  .thumbnail-produto:hover {
-    -webkit-filter: grayscale(0);
-  }
-
-  .thumbnail-produto img {
-    max-width : 100%;
-    max-height: 100%;
-  }
-
-  /* ProductDetails.jsx */
-  .detalhes-produto {
-    border-left   : 1px solid #100D08;
-    min-height    : 25rem;
-    padding-left  : 3rem;
-    padding-bottom: 2rem;
-    padding-top   : 1rem;
-  }
-
-  /* ProductInfo.jsx */
-
-  /* SizeForm.jsx */
-  .form-medidas {
-    padding-bottom: 2rem;
-  }
-
-  .form-medidas input {
-    border-radius: 0;
-    width        : 100%;
-  }
-
-  .form-medidas input:focus {
-    border: 1px solid #100D08;
-  }
-
-  /* BuyButton.jsx */
-  .comprar-produto button {
-    font-size    : 1.5rem;
-    height       : 4rem;
-    border-radius: 0;
-    border       : 0.2rem solid #100D08;
-    width        : 100%;
-  }
-
-  .comprar-produto button:hover {
-    color      : #FFC107;
-    font-weight: 600;
   }
 
   /* ShoppingBag.jsx */
